Fix padding on mobile devices

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -634,7 +634,10 @@ $color-primary: #ff00a0;
 
 .theme-doc-footer-edit-meta-row > .col {
   @media (min-width: 997px) {
-    padding-left: 20px; 
+    padding-left: 14px; 
+  }
+  @media (max-width: 667px) {
+    padding-left: 14px; 
   }
 }
 
